--- a/flask_thermostat.ini
+++ b/flask_thermostat.ini
@@ -4,7 +4,7 @@ module = wsgi:app
 master = true
 processes = 5
 
-socket = myptoject.sock
+socket = thermostat.sock
 chmod-socket = 660
 vacuum = true
 
